--- a/hugo.toml
+++ b/hugo.toml
@@ -123,7 +123,7 @@ disableHugoGeneratorInject = false
     topText = []
     bottomText = [
       "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
-      "Made with &#10084; by <a href=\"https://github.com/rhazdon\">Djordje Atlialp</a>"
+      "Love &#10084; by <a href=\"https://leaf.aquaplus.jp/product/wa2cc/">WHITE ALBUM2</a>"
     ]
 
   # Colors for favicons
