--- a/hugo.toml
+++ b/hugo.toml
@@ -245,3 +245,7 @@ hasCJKLanguage = true
     identifier = "novels"
     name       = "Novels"
     url        = "novels/"
+　[[menu.main]]
+    identifier = "game"
+    name       = "Game"
+    url        = "game/"
