--- a/hugo.toml
+++ b/hugo.toml
@@ -87,7 +87,7 @@ hasCJKLanguage = true
   # generate the buttons here: https://sharingbuttons.io
   # and add them into your own `layouts/partials/sharing-buttons.html`
   #
-  enableSharingButtons = true
+  enableSharingButtons = false
 
   # Global language menu
   #
