--- a/hugo.toml
+++ b/hugo.toml
@@ -116,9 +116,9 @@ hasCJKLanguage = true
   # If you want, you can easily override the default footer with your own content. 
   #
   [params.footer]
-    trademark = 2023
+    trademark = 2024
     rss = true
-    copyright = true
+    copyright = false
     author = true
 
     topText = []
